[package]
name = "crepe-bordeaux"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Martelle <matthew@martelle.dev"]
license = "MIT OR Apache-2.0"
description = "The cross-platform clipboard cli tool"
homepage = "https://github.com/Mcmartelle/crepe-bordeaux"
repository = "https://github.com/Mcmartelle/crepe-bordeaux"
readme = "README.md"
keywords = ["cli", "clipboard"]
categories = ["command-line-utilities"]
exclude = [
    "shell.nix",
    "rust-toolchain",
]


[[bin]]
name = "cb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
arboard = "3.3.2"
atty = "0.2.14"
clap = { version = "4.5.1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
